--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,189 @@
 :root {
   --blue: #1E60E4;
   --white: #FFFFFF;
+  --purple: #611F5F;
+  --darker-purple: #3C0E3C;
+  --dark-purple: #521B53;
+  --pratique: #FDE75B;
+  --impression: #FF5AAF;
+  --digital: #3BD1FF;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-color: var(--dark-purple);
 }
 
-header {
+.accueil {
   background: url("../public/images/bg.svg");
   height: 100vh;
 }
 
-header > img {
+.accueil > img {
   margin: 30% 0 30% 0;
-  height: 25vh;
+  height: 25%;
 }
 
-header > h2 {
+.accueil > h2 {
   font-size: 15px;
   color: var(--white);
-  margin: 0 10%;
+  margin: 0 14%;
+  text-align: center;
+  line-height: 24px;
 }
 
-header > p {
+.accueil > p {
   background-color: var(--white);
   padding: 18px 5px;
   text-align: center;
-  margin: 20%;
+  margin: 10% 25%;
   border-radius: 12px;
   color: var(--blue);
   font-size: 18px;
   font-weight: medium;
 }
 
-header > .planets {
+.accueil > .planets {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.search-bar {
+  height: 52px;
+  width: 100%;
+  border-radius: 8px;
+  border: rgba(255, 255, 255, 0.74) 2px solid;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-bar > button {
+  background-color: inherit;
+  border: none;
+}
+
+.search-bar > input {
+  outline: none;
+  font-size: 18px;
+  height: 30px;
+  width: 80%;
+  background-color: inherit;
+  border: none;
+}
+
+.search-bar > input::-webkit-input-placeholder {
+  color: #FFFFFF;
+}
+
+.search-bar > input:-ms-input-placeholder {
+  color: #FFFFFF;
+}
+
+.search-bar > input::-ms-input-placeholder {
+  color: #FFFFFF;
+}
+
+.search-bar > input::placeholder {
+  color: #FFFFFF;
+}
+
+.search-categorie {
+  height: 100%;
+  width: 90%;
+  margin-left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.search-categorie > img {
+  height: 50px;
+  margin: 50px 0 30px 0;
+}
+
+.search-categorie > .choice {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: var(--darker-purple) 2px solid;
+  border-radius: 8px;
+  -webkit-box-shadow: -4px 4px #3c0e3c7f;
+          box-shadow: -4px 4px #3c0e3c7f;
+  margin-bottom: 20px;
+}
+
+.search-categorie > .choice > .choice-btn {
+  width: 50%;
+  height: 52px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.search-categorie > .choice > .choice-btn > span {
+  color: rgba(255, 255, 255, 0.74);
+}
+
+.search-categorie > .choice > .actived {
+  background-color: var(--purple);
+  border-radius: 8px;
+}
+
+.search-categorie > .choice > .actived > span {
+  color: var(--white);
+}
+
+.search-categorie > .search > .result {
+  margin-top: 20px;
+  height: 60%;
+  width: 100%;
+}
+
+.search-categorie > .search > .result > .def {
+  height: 60px;
+  width: 100%;
+  background-color: var(--purple);
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  border-radius: 17px;
+  margin-bottom: 4px;
+  font-size: 16px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 12px;
+}
+
+.search-categorie > .search > .result > .def > h3 {
+  color: var(--white);
+  margin-bottom: 5px;
+}
+
+.search-categorie > .search > .result > .def > .digital {
+  color: var(--blue);
+}
+
+.search-categorie > .search > .result > .def > .impression {
+  color: var(--impression);
+}
+
+.search-categorie > .search > .result > .def > .pratique {
+  color: var(--pratique);
 }
 /*# sourceMappingURL=App.css.map */
