--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Daily Challenge Demo";
+    src: url("../public/font/DailyChallengeDEMO.otf") format("opentype")
+}
+
+
 :root{
     --blue: #1E60E4;
     --white: #FFFFFF;
@@ -53,7 +59,7 @@ body{
 
 // NAV
 .search-categorie{
-    height: 25vh;
+    height: fit-content;
     width: 100%;
     box-sizing: border-box;
 
@@ -63,6 +69,7 @@ body{
     }
 
     & > .choice{
+        height: 52px;
         width: 90%;
         margin-left: 50%;
         transform: translate(-50%);
@@ -72,22 +79,41 @@ body{
         box-shadow: -4px 4px #3c0e3c7f;
         margin-bottom: 20px;
 
-        & > .choice-btn{
+        & > .search-btn{
+            background: linear-gradient(to right, #3c0e3c7f 50%, #611F5F 50%) left;
+        }
+        
+        & > .categorie-btn{
+            background: linear-gradient(to left, #3c0e3c7f 50%, #611F5F  50%) right;
+        }
+
+        & > .search-btn, & > .categorie-btn{
             width: 50%;
-            height: 52px;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
-            // border: none;
-            background: #3c0e3c7f;
+            border: none;
+            cursor: pointer;
+            background-size: 200% 100%;
+            transition: 1s ease;
 
             & > span{
                 color: rgba(255, 255, 255, 0.74);
+                font-family: 'Lato', sans-serif;
+                font-style: italic;
             }
         }
 
+        & > .search-btn.actived{
+            background-position: right;
+        }
+        
+        & > .categorie-btn.actived{
+            background-position: left;
+        }
+        
         & > .actived{
-            background-color: var(--purple);
             border-radius: 8px;
 
             & > span{
@@ -166,11 +192,38 @@ body{
 .categorie{
     &  .categorie-1,  .categorie-2, .categorie-3{
         height: 25vh;
+        display: flex;
+        align-items: center;
 
         & > h2{
-            font-size: 42px;
+            font-size: 60px;
             text-transform: uppercase;
+            font-family: "Daily Challenge Demo";
         }
+    }
+
+    & > .categorie-1{
+        position: relative;
+
+        & > h2{
+            margin-left: 10%;
+        }
+
+        & > img{
+            height: 70%;
+            right: 0%;
+            position: absolute;
+        }
+    }
+    & > .categorie-2{
+        margin-left: 5%;
+
+        & > img{
+            height: 70%;
+        }
+    }
+    & > .categorie-3{
+        margin-left: 5%;
 
         & > img{
             height: 70%;
