--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,10 @@ body{
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
     background-color: var(--dark-purple);
+    // background-image: url('./public/images/bg3.svg');
+    // background-position: center;
+    // background-size: cover;
+    // background-repeat: no-repeat;
 }
 // ACCUEIL
 .accueil{
