--- a/src/App.scss
+++ b/src/App.scss
@@ -267,6 +267,10 @@ body{
         border: 2px #3C0E3C solid;
         color: #FFFFFF;
         font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-right: 30px;
     }
 
     & > img{
@@ -275,6 +279,12 @@ body{
         right: 0;
         width: 30%;
     }
+}
+
+.category, .content{
+    color: #fff;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .digitalBG{
